--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "css-what": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "react-wavify": "^1.5.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
