--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.3.10",
+    "@react-three/drei": "^7.3.1",
+    "@react-three/fiber": "^7.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -22,6 +24,7 @@
     "react-wavify": "^1.5.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "three": "^0.131.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
